fix: change popoup wrap max height, mobile top menu bug when scrolling

--- a/src/components/Popup/Popup.module.css
+++ b/src/components/Popup/Popup.module.css
@@ -15,7 +15,7 @@
   transform: translate(-50%, -50%);
   background-color: var(--color-green);
   padding: 50px;
-  max-height: calc(100vh - 20px);
+  max-height: calc(100% - 20px);
   overflow-y: hidden;
   display: flex;
   flex-direction: column;
